Сделала миграцию и аннотацию к Auto

--- a/test/fixtures/autos.yml
+++ b/test/fixtures/autos.yml
@@ -1,4 +1,15 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: autos
+#
+#  id         :bigint           not null, primary key
+#  status     :integer
+#  driver_id  :integer
+#  num        :string
+#  mark       :string
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
 
 one:
   status: 1
