Добавила completed в таблицу

--- a/test/fixtures/treks.yml
+++ b/test/fixtures/treks.yml
@@ -2,13 +2,15 @@
 #
 # Table name: treks
 #
-#  id         :bigint           not null, primary key
-#  address    :string
-#  store      :string
-#  trek_date  :date
-#  auto_id    :integer
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
+#  id            :bigint           not null, primary key
+#  address       :string
+#  store         :string
+#  trek_date     :date
+#  auto_id       :integer
+#  created_at    :datetime         not null
+#  updated_at    :datetime         not null
+#  dispatcher_id :bigint
+#  completed     :boolean          default(FALSE)
 #
 
 one:
